--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ sudo: false
 env:
     CI_SERVICE=travis-ci
 
+after_install:
+  - go get github.com/h12w/gosweep
+
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
 
