--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
 
 before_install:
   - go get github.com/h12w/gosweep
+  - go get github.com/mattn/goveralls
 
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
