--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,23 @@ cache:
   directories:
     - ${GOPATH}/src/github.com
     - ${GOPATH}/src/golang.org
-go: 1.6
+go:
+  - tip
+  - 1.9
+  - 1.8
 sudo: false
 
 env:
     CI_SERVICE=travis-ci
 
 before_install:
-  - go get golang.org/x/tools/cmd/goimports
-  - go get github.com/golang/lint/golint
-  - go get github.com/h12w/gosweep
-  - go get github.com/mattn/goveralls
-  - go get golang.org/x/tools/cmd/goimports
+  - go get -v -u golang.org/x/tools/cmd/goimports
+  - go get -v -u github.com/golang/lint/golint
+  - go get -v -u github.com/h12w/gosweep
+  - go get -v -u github.com/mattn/goveralls
+  - go get -v -u golang.org/x/tools/cmd/goimports
+  - go get -v -u github.com/golang/dep/cmd/dep
+  - dep ensure
 
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
