--- a/.travis.yml
+++ b/.travis.yml
@@ -12,21 +12,20 @@ sudo: false
 env:
     CI_SERVICE=travis-ci
 
-before_install:
-  - go get -v -u golang.org/x/tools/cmd/goimports
+install:
+  - go get -v -u github.com/client9/misspell/cmd/misspell
+  - go get -v -u github.com/fzipp/gocyclo
+  - go get -v -u github.com/golang/dep/cmd/dep
   - go get -v -u github.com/golang/lint/golint
+  - go get -v -u github.com/gordonklaus/ineffassign
   - go get -v -u github.com/h12w/gosweep
   - go get -v -u github.com/mattn/goveralls
-  - go get -v -u golang.org/x/tools/cmd/goimports
   - go get -v -u github.com/golang/dep/cmd/dep
+  - go get -v -u golang.org/x/tools/cmd/goimports
   - dep ensure
 
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
 
 script:
-  - go test -v ./...
-
-after_success:
   - bash ${GOPATH}/src/github.com/h12w/gosweep/gosweep.sh
-
