--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,6 +23,8 @@
 
 [[constraint]]
   name = "github.com/lib/pq"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/stretchr/testify"
+  version = "1.1.4"
